--- a/pom.xml
+++ b/pom.xml
@@ -8,6 +8,7 @@
     <artifactId>tournamentbel</artifactId>
     <packaging>pom</packaging>
     <version>1.0-SNAPSHOT</version>
+
     <modules>
         <module>tournamentbel-dao</module>
         <module>tournamentbel-entity</module>
@@ -35,12 +36,27 @@
             <artifactId>hibernate-core</artifactId>
             <version>4.3.0.Final</version>
         </dependency>
-        <dependency>
-            <groupId>com.intelisoft.tournamentbel</groupId>
-            <artifactId>tournamentbel-entity</artifactId>
-            <version>1.0-SNAPSHOT</version>
-        </dependency>
+
 
     </dependencies>
+
+    <build>
+
+        <plugins>
+
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <version>3.6.1</version>
+                <configuration>
+                    <source>1.5</source>
+                    <target>1.5</target>
+                </configuration>
+            </plugin>
+
+        </plugins>
+
+    </build>
+
 
 </project>
