--- a/tournamentbel-api/pom.xml
+++ b/tournamentbel-api/pom.xml
@@ -10,6 +10,13 @@
     <modelVersion>4.0.0</modelVersion>
 
     <artifactId>tournamentbel-api</artifactId>
+    <dependencies>
+        <dependency>
+            <groupId>com.intelisoft.tournamentbel</groupId>
+            <artifactId>tournamentbel-entity</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
+    </dependencies>
 
 
 </project>
