--- a/tournamentbel-web/pom.xml
+++ b/tournamentbel-web/pom.xml
@@ -27,6 +27,12 @@
       <version>6.0</version>
       <scope>provided</scope>
     </dependency>
+
+    <dependency>
+      <groupId>com.intelisoft.tournamentbel</groupId>
+      <artifactId>tournamentbel-service</artifactId>
+      <version>1.0-SNAPSHOT</version>
+    </dependency>
   </dependencies>
 
   <build>
