--- a/tournamentbel-web/src/main/webapp/WEB-INF/web.xml
+++ b/tournamentbel-web/src/main/webapp/WEB-INF/web.xml
@@ -5,13 +5,13 @@
 <web-app>
 
   <servlet>
-    <servlet-name>simple</servlet-name>
+    <servlet-name>test</servlet-name>
     <servlet-class>com.intelisoft.tournamentbel.web.servlets.MatchesServlet</servlet-class>
   </servlet>
 
   <servlet-mapping>
-    <servlet-name>simple</servlet-name>
-    <url-pattern>/welcome</url-pattern>
+    <servlet-name>test</servlet-name>
+    <url-pattern>/</url-pattern>
   </servlet-mapping>
 
 </web-app>
