--- a/tournamentbel-dao/pom.xml
+++ b/tournamentbel-dao/pom.xml
@@ -21,6 +21,12 @@
             <artifactId>tournamentbel-api</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
+
+        <dependency>
+            <groupId>org.hibernate</groupId>
+            <artifactId>hibernate-core</artifactId>
+            <version>4.3.0.Final</version>
+        </dependency>
     </dependencies>
 
 
