--- a/tournamentbel-web/src/main/webapp/WEB-INF/web.xml
+++ b/tournamentbel-web/src/main/webapp/WEB-INF/web.xml
@@ -4,14 +4,8 @@
 
 <web-app>
 
-  <!--<servlet>-->
-    <!--<servlet-name>test</servlet-name>-->
-    <!--<servlet-class>com.intelisoft.tournamentbel.web.servlets.MatchesServlet</servlet-class>-->
-  <!--</servlet>-->
+  <!--<welcome-file-list>-->
+    <!--<welcome-file>Hello.jsp</welcome-file>-->
+  <!--</welcome-file-list>-->
 
-  <!--<servlet-mapping>-->
-    <!--<servlet-name>test</servlet-name>-->
-    <!--<url-pattern>/</url-pattern>-->
-  <!--</servlet-mapping>-->
-
-</web-app>
+        </web-app>
