--- a/tournamentbel-web/src/main/webapp/WEB-INF/web.xml
+++ b/tournamentbel-web/src/main/webapp/WEB-INF/web.xml
@@ -4,8 +4,8 @@
 
 <web-app>
 
-  <!--<welcome-file-list>-->
-    <!--<welcome-file>Hello.jsp</welcome-file>-->
-  <!--</welcome-file-list>-->
+  <welcome-file-list>
+    <welcome-file>WEB-INF/Hell.jsp</welcome-file>
+  </welcome-file-list>
 
         </web-app>
