--- a/tournamentbel-web/src/main/webapp/WEB-INF/web.xml
+++ b/tournamentbel-web/src/main/webapp/WEB-INF/web.xml
@@ -1,11 +1,22 @@
-<!DOCTYPE web-app PUBLIC
- "-//Sun Microsystems, Inc.//DTD Web Application 2.3//EN"
- "http://java.sun.com/dtd/web-app_2_3.dtd" >
+<?xml version="1.0" encoding="ISO-8859-1"?>
+
+<!DOCTYPE web-app
+        PUBLIC "-//Sun Microsystems, Inc.//DTD Web Application 2.3//EN"
+        "http://java.sun.com/dtd/web-app_2_3.dtd">
 
 <web-app>
 
-  <welcome-file-list>
-    <welcome-file>WEB-INF/Hell.jsp</welcome-file>
-  </welcome-file-list>
+<filter>
+    <filter-name>FilterName</filter-name>
+    <filter-class>FilterConnect</filter-class>
+    <init-param>
+        <param-name>active</param-name>
+        <param-value>true</param-value>
+    </init-param>
+</filter>
 
-        </web-app>
+    <filter-mapping>
+        <filter-name>FilterName</filter-name>
+        <url-pattern>/Test</url-pattern>
+    </filter-mapping>
+</web-app>
